cabal-version: >=1.10
name: diagrams-playground
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2019 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/jhrcek/diagrams-playground#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

executable diagrams-playground
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        DiagonalLatticePaths
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        diagrams-lib -any,
        diagrams-svg -any,
        combinat -any
